** https://github.com/clj-commons/etaoin/issues/390[#390]: Add internal clj-kondo config
** https://github.com/clj-commons/etaoin/issues/381[#381]: In addition to ubuntu, now also testing on macOS and Windows (using GitHub Actions https://github.com/clj-commons/etaoin/issues/392[#392] with parallelization https://github.com/clj-commons/etaoin/issues/420[#420])

== v0.4.6

* https://github.com/clj-commons/etaoin/issues/367[#367]: Use actions to fix double-click

== v0.4.5

* https://github.com/clj-commons/etaoin/pull/365[#365]: Improve status messages when waiting

== v0.4.4

* Add v2 api

== v0.4.3

* Fix user-agent functions

== v0.4.2

* Add user-agent functions to api

== v0.4.1

* https://github.com/clj-commons/etaoin/issues/347[#347]: Add support for mltiple clicks
* https://github.com/clj-commons/etaoin/pull/349[#349]: Fix typo for duration within `add-action`

== v0.4.0 [breaking]

Breaking Changes

* https://github.com/clj-commons/etaoin/issues/111[#111]: the driver instance is *now a map instead of an atom*.
+
Breaking changes are never embarked on lightly but we felt it important to transition to more a more idiomatic use of Clojure.
+
All the internal functions that used to modify the driver atom now just return a new version of a map.
If you have `swap!` or something similar in your code for the driver, please refactor your code before you update.

Other Changes

* https://github.com/clj-commons/etaoin/issues/44[#44]: Add `with-screenshots` macro
* https://github.com/clj-commons/etaoin/issues/196[#196]: Add support for running Selenium IDE files
** https://github.com/clj-commons/etaoin/issues/336[#336]: Docs
** https://github.com/clj-commons/etaoin/issues/329[#329]: Cli entry point
* https://github.com/clj-commons/etaoin/issues/103[#103]: Add w3c webdriver action support

== v0.3.10

* https://github.com/clj-commons/etaoin/issues/317[#317]: Add a description of the trouble with chromedriver