@@ -52,4 +52,6 @@
                                (str (fs/cwd) ":/etaoin")
                                "-w" "/etaoin"
                                "etaoin:latest"
-                               *command-line-args*)}}}
+                               *command-line-args*)}
+  ci-release     {:doc "release tasks, use --help for args"
+                  :task ci-release/-main }}}
