@@ -2,5 +2,6 @@
  [["Readme" {:file "README.adoc"}]
   ["Changelog" {:file "CHANGELOG.adoc"}]
   ["User Guide" {:file "doc/01-user-guide.adoc"}]
-  ["Developer Guide" {:file "doc/02-developer-guide.adoc"}]]
+  ["Developer Guide" {:file "doc/02-developer-guide.adoc"}]
+  ["Maintainer Guide" {:file "doc/03-maintainer-guide.adoc"}]]
  :cljdoc/languages ["clj"]}
